<li>Custom status messages. A maximum of 64 characters will be imposed.</li>
<li>Denote extreme time deltas in Chat. Currently configured to thirty seconds. Source only.</li>
<li>Digital signatures should vouch for private key information.</li>
<li>Display URL database connection information within the Search panel.</li>
<li>Do not delete URLs from shared.db unless they were properly loaded.<li>
<li>Dual-purpose domain check boxes. Please see URLs.</li>
<li>Encapsulate data into streams and decrease Base-64 conversions. This will result in smaller messages. Previous functionality will be disrupted.</li>
<li>Establish authentication and encryption keys via silent SMP. The 32-byte authentication and 32-byte encryption keys are created from a Whirlpool digest of the SHA-512 digest of the secret.</li>
<li>Guard QList::last().</li>
<li>Guard QList::removeAt().</li>
<li>Notify the user of URL import statistics.</li>
<li>Prompt before accessing a remote URL.</li>
<li>Replace spaces with dashes in StarBeam and e-mail attachment file names.</li>
<li>Simplified copying and exporting of public keys.</li>
<li>Updated NTRU files (05/14/2015).</li>
<li>Verify a StarBeam's provided pulse size against some defined maximum.</li>
</ol>
0.22 (04/29/2015)
<ol>
<li>Added Documentation/Spot-On-Kernel.1.</li>
<li>Added the option 65536 to the File Encryption's Read Size.</li>
<li>Allow modification of StarBeam pulse sizes.</li>
<li>Automatically verify StarBeams. Please see the Options panel.</li>
<li>Corrected QSqlQuery preparation. QSqlQuery::exec() must not be used to prepare SQL statements. (spoton_listener::slotNewConnection(), spoton_misc::savePublishedNeighbo())</li>
<li>Corrected Qt DLLs in the Windows bundle.</li>
<li>Corrected inspection of QSqlQuery::exec() errors in various locations.</li>
<li>Corrected server-side processing of UDP datagrams.</li>